--- a/palvelut.html
+++ b/palvelut.html
@@ -235,7 +235,7 @@
               </a>
             </div>
             <div class="w-full group overflow-hidden rounded-xl">
-              <a href="#" class="block rounded-xl px-8 pb-8 pt-4 relative transition duration-200 group-hover:bg-gray-100 bg-[#181F42]" style="height: 420px;">
+              <a href="tehtavienhallinta.html" class="block rounded-xl px-8 pb-8 pt-4 relative transition duration-200 group-hover:bg-gray-100 bg-[#181F42]" style="height: 420px;">
                 <div class="absolute inset-0 bg-white opacity-0 group-hover:opacity-80 transition duration-200 rounded-xl"></div>
                 <p class="text-2xl font-semibold max-w-xs group-hover:bg-transparent rounded-lg relative group-hover:text-[#181F42] text-white">Työnhallinta</p>
                 <p class="tracking-tight text-xl font-medium max-w-xs rounded-lg mt-2 opacity-0 transition-opacity duration-200 ease-in-out group-hover:opacity-100 relative text-white group-hover:text-[#181F42]">Työnhallinnan sovelluksellamme teet työnhallinnasta ja ohjailusta vaivatonta.</p>
