--- a/tehtavienhallinta.html
+++ b/tehtavienhallinta.html
@@ -70,8 +70,8 @@
       <section class="py-36 bg-[#181F42] overflow-hidden">
         <div class="container px-4 mx-auto">
           <div class="flex flex-wrap xl:items-center -m-8">
-            <div class="w-full md:w-1/2 p-8">
-              <h2 class="mb-5 text-6xl md:text-7xl font-bold font-heading tracking-px-n leading-tight text-white">Yksinkertaista tehtävienhallintaa</h2>
+            <div class="w-full md:w-1/2 p-4 xl:p-8">
+              <h2 class="mb-5 text-4xl sm:text-5xl lg:text-7xl font-bold font-heading tracking-px-n leading-tight text-white">Yksinkertaista tehtävienhallintaa</h2>
               <p class="mb-8 text-xl text-white font-medium md:max-w-lg">Helmi Solutions tehtävienhallinnalla luot yrityksellesi takuulla suuren askeleen kohti helppoa arkea ja tehostat yrityksesi toimintaa ohjailemalla tehtävät suoraan tekijöille. Ei paperilappuja tai loputtomia puheluita enää koskaan. Heitä valkotaulut ja muut antiikkiset ratkaisut roskikseen.</p>
               <div class="mb-20 md:inline-block">
                 <button class="px-7 py-3 w-full text-black text-lg font-semibold rounded-xl bg-[#71C949] hover:bg-[#7DCF58] transition ease-in-out duration-200" type="button">Tutustu palveluun</button>
@@ -97,7 +97,7 @@
                 </div>
               </div>
             </div>
-            <div class="w-full md:w-1/2 p-8">
+            <div class="w-full md:w-1/2 p-4 md:pl-6 lg:p-8 xl:p-8">
               <div class="max-w-max mx-auto overflow-hidden rounded-xl">
                 <img class="transform hover:scale-105 transition ease-in-out duration-1000" src="img/tehtavienhallinta.png" alt="">
               </div>
