--- a/tehtavienhallinta.html
+++ b/tehtavienhallinta.html
@@ -67,7 +67,7 @@
         </div>
     </header>
                 
-      <section class="py-36 bg-[#181F42] overflow-hidden">
+      <section class="py-28 bg-[#181F42] overflow-hidden px-2">
         <div class="container px-4 mx-auto">
           <div class="flex flex-wrap xl:items-center -m-8">
             <div class="w-full md:w-1/2 p-4 xl:p-8">
@@ -106,7 +106,7 @@
         </div>
       </section>
                 
-      <section class="pt-28 pb-36 bg-[#355BAD] overflow-hidden"><div class="container px-4 mx-auto">
+      <section class="pt-28 pb-36 bg-[#355BAD] overflow-hidden"><div class="container px-2 mx-auto">
           <h2 class="mb-6 text-6xl md:text-8xl xl:text-10xl text-white text-center font-bold font-heading tracking-px-n leading-none md:max-w-xl mx-auto">Kokeile ilmaiseksi!</h2>
           <p class="mb-20 text-lg text-white text-center font-medium leading-normal md:max-w-lg mx-auto">Voit aina kokeilla 14 päivää ilmaiseksi. Mikäli et peru lisenssin tilausta 14 päivän kuluessa, aloitamme laskutuksen.</p>
           <div class="relative overflow-hidden rounded-xl md:max-w-3xl mx-auto">
