--- a/tehtavienhallinta.html
+++ b/tehtavienhallinta.html
@@ -110,7 +110,7 @@
           <h2 class="mb-6 text-6xl md:text-8xl xl:text-10xl text-white text-center font-bold font-heading tracking-px-n leading-none md:max-w-xl mx-auto">Kokeile ilmaiseksi!</h2>
           <p class="mb-20 text-lg text-white text-center font-medium leading-normal md:max-w-lg mx-auto">Voit aina kokeilla 14 päivää ilmaiseksi. Mikäli et peru lisenssin tilausta 14 päivän kuluessa, aloitamme laskutuksen.</p>
           <div class="relative overflow-hidden rounded-xl md:max-w-3xl mx-auto">
-            <img class="absolute top-0 left-0" src="flaro-assets/images/pricing/gradient2.svg" alt=""><div class="flex flex-wrap divide-y md:divide-x md:divide-y-0 divide-[#355BAD]">
+            <img class="absolute top-0 left-0" src="img/gradient2.svg" alt=""><div class="flex flex-wrap divide-y md:divide-x md:divide-y-0 divide-[#355BAD]">
               <div class="w-full md:w-1/2">
                 <div class="px-11 pt-10 pb-12 bg-[#181F42]">
                   <svg class="mb-9" width="48" height="48" viewbox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M19.5 34L18 40L16 42H32L30 40L28.5 34M6 26H42M10 34H38C40.2091 34 42 32.2091 42 30V10C42 7.79086 40.2091 6 38 6H10C7.79086 6 6 7.79086 6 10V30C6 32.2091 7.79086 34 10 34Z" stroke="#64748B" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path></svg><p class="mb-3 text-white font-semibold tracking-wide">Sovellus</p>
@@ -185,7 +185,7 @@
               <div class="flex flex-wrap items-center mb-7 -m-2">
                 <div class="w-auto p-2">
                   <div class="relative w-14 h-14 text-2xl text-white font-bold bg-[#71C949] rounded-full">
-                    <img class="absolute top-0 left-0" src="flaro-assets/images/how-it-works/gradient.svg" alt="">
+                    <img class="absolute top-0 left-0 rounded-full" src="img/gradient.svg" alt="">
                     <span class="absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 text-black">2</span>
                   </div>
                 </div>
@@ -225,8 +225,8 @@
         </div>
       </section>
                 
-      <section class="bg-white bg-no-repeat bg-center bg-cover bg-fixed overflow-hidden" style="background-image: url('flaro-assets/images/cta/bg.jpeg');">
-        <div class="py-40 bg-[#355BAD]" style="backdrop-filter: blur(12px);">
+      <section class="bg-white bg-no-repeat bg-center bg-cover bg-fixed overflow-hidden" style="background-image: url('img/bg.jpeg');">
+        <div class="py-40 bg-[#355BAD] bg-opacity-20" style="backdrop-filter: blur(12px);">
           <div class="container px-4 mx-auto">
             <div class="text-center max-w-3xl mx-auto">
               <p class="mb-9 font-sans text-md text-white font-semibold uppercase tracking-px">JÄIKÖ MIETITYTTÄMÄÄN?</p>
