--- a/tehtavienhallinta.html
+++ b/tehtavienhallinta.html
@@ -67,11 +67,11 @@
         </div>
     </header>
                 
-      <section class="py-28 bg-[#181F42] overflow-hidden px-2">
+      <section class="py-28 bg-[#181F42] overflow-hidden px-4">
         <div class="container px-4 mx-auto">
           <div class="flex flex-wrap xl:items-center -m-8">
             <div class="w-full md:w-1/2 p-4 xl:p-8">
-              <h2 class="mb-5 text-4xl sm:text-5xl lg:text-7xl font-bold font-heading tracking-px-n leading-tight text-white">Yksinkertaista tehtävienhallintaa</h2>
+              <h2 class="mb-5 text-5xl sm:text-5xl lg:text-7xl font-bold font-heading tracking-tight sm:tracking-normal leading-tight text-white">Yksinkertaista tehtävienhallintaa</h2>
               <p class="mb-8 text-xl text-white font-medium md:max-w-lg">Helmi Solutions tehtävienhallinnalla luot yrityksellesi takuulla suuren askeleen kohti helppoa arkea ja tehostat yrityksesi toimintaa ohjailemalla tehtävät suoraan tekijöille. Ei paperilappuja tai loputtomia puheluita enää koskaan. Heitä valkotaulut ja muut antiikkiset ratkaisut roskikseen.</p>
               <div class="mb-20 md:inline-block">
                 <button class="px-7 py-3 w-full text-black text-lg font-semibold rounded-xl bg-[#71C949] hover:bg-[#7DCF58] transition ease-in-out duration-200" type="button">Tutustu palveluun</button>
@@ -106,7 +106,7 @@
         </div>
       </section>
                 
-      <section class="pt-28 pb-36 bg-[#355BAD] overflow-hidden"><div class="container px-2 mx-auto">
+      <section class="pt-28 pb-36 bg-[#355BAD] overflow-hidden"><div class="container px-4 mx-auto">
           <h2 class="mb-6 text-6xl md:text-8xl xl:text-10xl text-white text-center font-bold font-heading tracking-px-n leading-none md:max-w-xl mx-auto">Kokeile ilmaiseksi!</h2>
           <p class="mb-20 text-lg text-white text-center font-medium leading-normal md:max-w-lg mx-auto">Voit aina kokeilla 14 päivää ilmaiseksi. Mikäli et peru lisenssin tilausta 14 päivän kuluessa, aloitamme laskutuksen.</p>
           <div class="relative overflow-hidden rounded-xl md:max-w-3xl mx-auto">
