--- a/meista.html
+++ b/meista.html
@@ -97,7 +97,7 @@
         </div>            
     </section>
     
-    <section class="px-10 sm:px-4 mt-20 mb-20">
+    <section class="px-10 sm:px-4 mt-20 md:mt-32 lg:mt-40 mb-20">
         <div class="max-w-[600px] text-center md:text-end mx-auto">
             <h1 class="text-5xl md:text-6xl text-white mb-5">Tiimimme</h1>
         </div>
