--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body class="bg-[#0E1111]">
 <!--Header-->
-<section class="px-4 md:px-20 pb-24 bg-center bg-no-repeat bg-cover relative overflow-hidden" style="background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('img/baarikuva.jpeg')">
+<section class="px-4 md:px-20 pb-24 bg-center bg-no-repeat bg-cover relative overflow-hidden" style="background-image: url('img/baarikuva.png')">
   <div x-data="{ mobileNavOpen: false }">
         <nav class="relative p-4">
             <div class="flex items-center justify-between">
